added fields in quests,forget and reset password
