# storage/api-docs/api-docs.json
@@ -530,7 +530,7 @@
                                     },
                                     "status": {
                                         "type": "integer",
-                                        "example": "1"
+                                        "example": 1
                                     },
                                     "user_id": {
                                         "type": "integer",
@@ -539,6 +539,81 @@
                                     "image": {
                                         "type": "object",
                                         "example": "{}"
+                                    },
+                                    "category": {
+                                        "type": "string",
+                                        "example": "{}"
+                                    },
+                                    "additionals": {
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "link": {
+                                                    "type": "string",
+                                                    "example": "link"
+                                                },
+                                                "task_type": {
+                                                    "type": "string",
+                                                    "example": "link"
+                                                },
+                                                "number_invitation": {
+                                                    "type": "string",
+                                                    "example": 1
+                                                },
+                                                "description": {
+                                                    "type": "string",
+                                                    "example": "For API"
+                                                },
+                                                "endpoint": {
+                                                    "type": "string",
+                                                    "example": "For API"
+                                                },
+                                                "methods": {
+                                                    "type": "string",
+                                                    "example": "For API"
+                                                },
+                                                "api_key": {
+                                                    "type": "string",
+                                                    "example": "For API"
+                                                },
+                                                "partnership": {
+                                                    "type": "string",
+                                                    "example": "for partnership link"
+                                                },
+                                                "request_type": {
+                                                    "type": "string",
+                                                    "example": "text, url, number"
+                                                },
+                                                "correct_answer": {
+                                                    "type": "string",
+                                                    "example": "for answer"
+                                                },
+                                                "stars": {
+                                                    "type": "string",
+                                                    "example": "2"
+                                                },
+                                                "steps": {
+                                                    "type": "string",
+                                                    "example": "0 to 10"
+                                                },
+                                                "labels": {
+                                                    "type": "string",
+                                                    "example": "0 to 10"
+                                                },
+                                                "files": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "object"
+                                                    },
+                                                    "example": [
+                                                        "object",
+                                                        "object",
+                                                        "object"
+                                                    ]
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
                                     }
                                 },
                                 "type": "object"
@@ -615,6 +690,81 @@
                                                 "image": {
                                                     "type": "object",
                                                     "example": "{}"
+                                                },
+                                                "category": {
+                                                    "type": "string",
+                                                    "example": "{}"
+                                                },
+                                                "additionals": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "link": {
+                                                                "type": "string",
+                                                                "example": "link"
+                                                            },
+                                                            "task_type": {
+                                                                "type": "string",
+                                                                "example": "link"
+                                                            },
+                                                            "number_invitation": {
+                                                                "type": "string",
+                                                                "example": 1
+                                                            },
+                                                            "description": {
+                                                                "type": "string",
+                                                                "example": "For API"
+                                                            },
+                                                            "endpoint": {
+                                                                "type": "string",
+                                                                "example": "For API"
+                                                            },
+                                                            "methods": {
+                                                                "type": "string",
+                                                                "example": "For API"
+                                                            },
+                                                            "api_key": {
+                                                                "type": "string",
+                                                                "example": "For API"
+                                                            },
+                                                            "partnership": {
+                                                                "type": "string",
+                                                                "example": "for partnership link"
+                                                            },
+                                                            "request_type": {
+                                                                "type": "string",
+                                                                "example": "text, url, number"
+                                                            },
+                                                            "correct_answer": {
+                                                                "type": "string",
+                                                                "example": "for answer"
+                                                            },
+                                                            "stars": {
+                                                                "type": "string",
+                                                                "example": "2"
+                                                            },
+                                                            "steps": {
+                                                                "type": "string",
+                                                                "example": "0 to 10"
+                                                            },
+                                                            "labels": {
+                                                                "type": "string",
+                                                                "example": "0 to 10"
+                                                            },
+                                                            "files": {
+                                                                "type": "array",
+                                                                "items": {
+                                                                    "type": "object"
+                                                                },
+                                                                "example": [
+                                                                    "object",
+                                                                    "object",
+                                                                    "object"
+                                                                ]
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
                                                 }
                                             },
                                             "type": "object"
@@ -1578,6 +1728,148 @@
                         "BearerAuth": []
                     }
                 ]
+            }
+        },
+        "/api/forget-password": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Send OTP to email for password reset",
+                "operationId": "54fdb4f58f53c4fb6653c1cb80ed0ed8",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "user@example.com"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OTP sent successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "OTP sent successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Email does not exist"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/reset-password": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Reset password using OTP",
+                "operationId": "717f2ce41afc56409f4434e0ba098298",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "otp": {
+                                        "type": "string",
+                                        "example": "1234"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "user@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "newpassword123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Password successfully changed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Password successfully changed"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Email does not exist"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
     },
